still trying to fix ccs overview contrast issues

--- a/chamber/styles/member.css
+++ b/chamber/styles/member.css
@@ -38,6 +38,17 @@ header {
   height: auto;
 }
 
+a {
+  color: #2F2A6A;
+  text-decoration: underline;
+}
+
+a:hover,
+a:focus {
+  color: #1E1A4F;
+}
+
+
 nav {
   background-color: var(--image-background);
   border-top: 1px solid var(--primary-color);
